syntax = "proto3";
package kad;

option go_package = "gen/kad_pb";

message RequestHeader {
  bytes requester_id = 1;
  repeated string requester_local_addresses = 2;
}

message Request {
  RequestHeader header = 1;

  oneof body {
    PingRequest ping = 2;
    FindNodeRequest find_node = 3;
    StoreRequest store = 4;
    FindValueRequest find_value = 5;
  }
}

message ResponseHeader {
  bytes responder_id = 1;
  repeated string responder_local_addresses = 2;
}

message Response {
  ResponseHeader header = 1;

  oneof body {
    PingResponse ping = 2;
    FindNodeResponse find_node = 3;
    StoreResponse store = 4;
    FindValueResponse find_value = 5;
  }
}

message NodeInfo {
  bytes id = 1;
  repeated string addresses = 2;
}

message PingRequest {}
message PingResponse {}

message FindNodeRequest {
  bytes node_id = 1;
}

message FindNodeResponse {
  repeated NodeInfo node_infos = 1;
}

message StoreRequest {
  string key = 1;
  bytes value = 2;
}
message StoreResponse {}

message FindValueRequest {
  string key = 1;
}

message FindValueValueResponse {
  bytes value = 1;
}
message FindValueNodesResponse {
  repeated NodeInfo node_infos = 1;
}
message FindValueResponse {
  oneof val {
    FindValueValueResponse value_response = 1;
    FindValueNodesResponse nodes_response = 2;
  }
}